// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Button/Button Badges 1`] = `
<div
  className="fddocs-container"
>
  <button
    className="fd-button"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Default
    </span>
    <span
      className="fd-button__badge"
    >
      1234
    </span>
  </button>
  <button
    className="fd-button fd-button--emphasized"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Emphasized
    </span>
    <span
      className="fd-button__badge"
    >
      123
    </span>
  </button>
  <button
    className="fd-button fd-button--transparent"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Transparent
    </span>
    <span
      className="fd-button__badge"
    >
      12
    </span>
  </button>
  <button
    className="fd-button fd-button--compact"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Default compact
    </span>
    <span
      className="fd-button__badge"
    >
      1234
    </span>
  </button>
  <button
    className="fd-button fd-button--emphasized fd-button--compact"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Emphasized compact
    </span>
    <span
      className="fd-button__badge"
    >
      123
    </span>
  </button>
  <button
    className="fd-button fd-button--transparent fd-button--compact"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Transparent compact
    </span>
    <span
      className="fd-button__badge"
    >
      12
    </span>
  </button>
</div>
`;

exports[`Storyshots Component API/Button/Button Dev 1`] = `
<button
  className="fd-button"
  onClick={[Function]}
  type="button"
>
  <span
    className="fd-button__text"
  >
    Dev
  </span>
</button>
`;

exports[`Storyshots Component API/Button/Button Icons 1`] = `
<div
  className="fddocs-container"
>
  <button
    className="fd-button fd-button--emphasized"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Add to Cart
    </span>
    <i
      aria-hidden={true}
      className="sap-icon--cart"
      role="img"
    />
  </button>
  <button
    className="fd-button"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Add to Cart
    </span>
    <i
      aria-hidden={true}
      className="sap-icon--cart"
      role="img"
    />
  </button>
  <button
    className="fd-button fd-button--transparent"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Filter
    </span>
    <i
      aria-hidden={true}
      className="sap-icon--filter"
      role="img"
    />
  </button>
  <button
    className="fd-button fd-button--positive"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Approve
    </span>
    <i
      aria-hidden={true}
      className="sap-icon--accept"
      role="img"
    />
  </button>
  <button
    className="fd-button fd-button--negative"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Reject
    </span>
    <i
      aria-hidden={true}
      className="sap-icon--decline"
      role="img"
    />
  </button>
  <button
    className="fd-button fd-button--ghost"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Edit
    </span>
    <i
      aria-hidden={true}
      className="sap-icon--edit"
      role="img"
    />
  </button>
  <button
    className="fd-button fd-button--attention"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Ignore
    </span>
    <i
      aria-hidden={true}
      className="sap-icon--warning"
      role="img"
    />
  </button>
  <div
    className="fddocs-container--break"
  />
  <button
    aria-label="See warning"
    className="fd-button fd-button--emphasized"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--alert"
      role="img"
    />
  </button>
  <button
    aria-label="Add to cart"
    className="fd-button"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--cart"
      role="img"
    />
  </button>
  <button
    aria-label="Filter"
    className="fd-button fd-button--transparent"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--cart"
      role="img"
    />
  </button>
  <button
    aria-label="Accept"
    className="fd-button fd-button--positive"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--accept"
      role="img"
    />
  </button>
  <button
    aria-label="Decline"
    className="fd-button fd-button--negative"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--decline"
      role="img"
    />
  </button>
  <button
    aria-label="Edit"
    className="fd-button fd-button--ghost"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--edit"
      role="img"
    />
  </button>
  <button
    aria-label="Ignore"
    className="fd-button fd-button--attention"
    type="button"
  >
    <i
      aria-hidden={true}
      className="sap-icon--warning"
      role="img"
    />
  </button>
</div>
`;

exports[`Storyshots Component API/Button/Button No Styles 1`] = `
<button
  className="xxx-button"
  type="button"
>
  <span
    className="xxx-button__text"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Component API/Button/Button Options 1`] = `
<div
  className="fddocs-container"
>
  <button
    className="fd-button fd-button--emphasized"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Emphasized Button
    </span>
  </button>
  <button
    className="fd-button"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Default Button
    </span>
  </button>
  <button
    className="fd-button fd-button--transparent"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Transparent Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Component API/Button/Button Primary 1`] = `
<button
  className="fd-button"
  type="button"
>
  <span
    className="fd-button__text"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Component API/Button/Button Sizes 1`] = `
<div
  className="fddocs-container"
>
  <button
    className="fd-button"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Default
    </span>
  </button>
  <button
    className="fd-button fd-button--compact"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Compact
    </span>
  </button>
</div>
`;

exports[`Storyshots Component API/Button/Button States 1`] = `
<div
  className="fddocs-container"
>
  <button
    className="fd-button"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Default
    </span>
  </button>
  <button
    className="fd-button is-selected"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Selected
    </span>
  </button>
  <button
    className="fd-button is-disabled"
    disabled={true}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Disabled
    </span>
  </button>
  <button
    aria-describedby="fd-mocked-short-id"
    aria-disabled={true}
    className="fd-button is-disabled"
    onClick={[Function]}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Disabled Focusable
    </span>
  </button>
  <p
    aria-live="assertive"
    className="fd-button__instructions"
    id="fd-mocked-short-id"
  >
    To enable this button use the knob in the dev story
  </p>
  <div
    className="fddocs-container--break"
  />
  <button
    className="fd-button fd-button--emphasized"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Emphasized
    </span>
  </button>
  <button
    className="fd-button fd-button--emphasized is-selected"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Emphasized
    </span>
  </button>
  <button
    className="fd-button fd-button--emphasized is-disabled"
    disabled={true}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Emphasized
    </span>
  </button>
  <button
    aria-describedby="fd-mocked-short-id"
    aria-disabled={true}
    className="fd-button fd-button--emphasized is-disabled"
    onClick={[Function]}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Emphasized Focusable
    </span>
  </button>
  <p
    aria-live="assertive"
    className="fd-button__instructions"
    id="fd-mocked-short-id"
  >
    To enable this button use the knob in the dev story
  </p>
  <div
    className="fddocs-container--break"
  />
  <button
    className="fd-button fd-button--transparent"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Transparent
    </span>
  </button>
  <button
    className="fd-button fd-button--transparent is-selected"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Transparent
    </span>
  </button>
  <button
    className="fd-button fd-button--transparent is-disabled"
    disabled={true}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Transparent
    </span>
  </button>
  <button
    aria-describedby="fd-mocked-short-id"
    aria-disabled={true}
    className="fd-button fd-button--transparent is-disabled"
    onClick={[Function]}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Transparent Focusable
    </span>
  </button>
  <p
    aria-live="assertive"
    className="fd-button__instructions"
    id="fd-mocked-short-id"
  >
    To enable this button use the knob in the dev story
  </p>
  <div
    className="fddocs-container--break"
  />
  <button
    className="fd-button fd-button--positive"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Positive Button
    </span>
  </button>
  <button
    className="fd-button fd-button--positive is-selected"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Positive Button
    </span>
  </button>
  <button
    className="fd-button fd-button--positive is-disabled"
    disabled={true}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Positive Button
    </span>
  </button>
  <button
    aria-describedby="fd-mocked-short-id"
    aria-disabled={true}
    className="fd-button fd-button--positive is-disabled"
    onClick={[Function]}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Positive Focusable
    </span>
  </button>
  <p
    aria-live="assertive"
    className="fd-button__instructions"
    id="fd-mocked-short-id"
  >
    To enable this button use the knob in the dev story
  </p>
  <div
    className="fddocs-container--break"
  />
  <button
    className="fd-button fd-button--negative"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Negative Button
    </span>
  </button>
  <button
    className="fd-button fd-button--negative is-selected"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Negative Button
    </span>
  </button>
  <button
    className="fd-button fd-button--negative is-disabled"
    disabled={true}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Negative Button
    </span>
  </button>
  <button
    aria-describedby="fd-mocked-short-id"
    aria-disabled={true}
    className="fd-button fd-button--negative is-disabled"
    onClick={[Function]}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Negative Focusable
    </span>
  </button>
  <p
    aria-live="assertive"
    className="fd-button__instructions"
    id="fd-mocked-short-id"
  >
    To enable this button use the knob in the dev story
  </p>
  <div
    className="fddocs-container--break"
  />
  <button
    className="fd-button fd-button--ghost"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Ghost Button
    </span>
  </button>
  <button
    className="fd-button fd-button--ghost is-selected"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Ghost Button
    </span>
  </button>
  <button
    className="fd-button fd-button--ghost is-disabled"
    disabled={true}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Ghost Button
    </span>
  </button>
  <button
    aria-describedby="fd-mocked-short-id"
    aria-disabled={true}
    className="fd-button fd-button--ghost is-disabled"
    onClick={[Function]}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Ghost Focusable
    </span>
  </button>
  <p
    aria-live="assertive"
    className="fd-button__instructions"
    id="fd-mocked-short-id"
  >
    To enable this button use the knob in the dev story
  </p>
  <div
    className="fddocs-container--break"
  />
  <button
    className="fd-button fd-button--attention"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Attention Button
    </span>
  </button>
  <button
    className="fd-button fd-button--attention is-selected"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Attention Button
    </span>
  </button>
  <button
    className="fd-button fd-button--attention is-disabled"
    disabled={true}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Attention Button
    </span>
  </button>
  <button
    aria-describedby="fd-mocked-short-id"
    aria-disabled={true}
    className="fd-button fd-button--attention is-disabled"
    onClick={[Function]}
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Attention Focusable
    </span>
  </button>
  <p
    aria-live="assertive"
    className="fd-button__instructions"
    id="fd-mocked-short-id"
  >
    To enable this button use the knob in the dev story
  </p>
</div>
`;

exports[`Storyshots Component API/Button/Button Types 1`] = `
<div
  className="fddocs-container"
>
  <button
    className="fd-button"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Default Button
    </span>
  </button>
  <button
    className="fd-button fd-button--standard"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Standard Button
    </span>
  </button>
  <button
    className="fd-button fd-button--positive"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Positive Button
    </span>
  </button>
  <button
    className="fd-button fd-button--negative"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Negative Button
    </span>
  </button>
  <button
    className="fd-button fd-button--ghost"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Ghost Button
    </span>
  </button>
  <button
    className="fd-button fd-button--attention"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Attention Button
    </span>
  </button>
</div>
`;
